test/integration/bad/new/fundef-bad4.stan
functions { void T(data while); }